--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,5 +1,5 @@
 indent_type = "Spaces"
 indent_width = 2
 quote_style = "AutoPreferSingle"
-collapse_simple_statement = "FunctionOnly"
+collapse_simple_statement = "Never"
 column_width = 80
